[package]
name = "launcher"
version = "0.1.0"
authors = ["Jakob Schwab <j.schwab@mail.de>"]
edition = "2018"
default-run = "launcher"

[[bin]]
path = "src/main_launcher.rs"
name = "launcher"

[dependencies.ct_lib]
path = "../cottontail/ct_lib"

[dependencies.ct_platform]
path = "../cottontail/ct_platform"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }

[dependencies]
gif = "0.10"
indexmap = "1.3"
rayon = "1.3"
mtpng = "0.3.4"
serde = "1.0"